--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
+  "scripts": {
+    "test": "ts-node src/index.ts"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/express-http-proxy": "^1.6.1",
     "@types/node": "^14.6.3",
     "gts": "^2.0.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "yarn-upgrade-all": "^0.5.4"
-  },
-  "scripts": {
-    "check": "gts check",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "yarn run compile",
-    "pretest": "yarn run compile",
-    "posttest": "yarn run check"
   }
 }
