--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "test": "ts-node src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-http-proxy": "^1.6.1",
     "@types/node": "^14.6.3",
