--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+  "license": "MIT",
   "scripts": {
-    "test": "ts-node src/index.ts"
+    "test": "ts-node -r dotenv-override-true/config src/index.ts"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2"
@@ -12,6 +14,7 @@
     "@types/express": "^4.17.8",
     "@types/express-http-proxy": "^1.6.1",
     "@types/node": "^14.6.3",
+    "dotenv-override-true": "^6.2.1",
     "gts": "^2.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
