--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "license": "MIT",
   "scripts": {
-    "test": "ts-node -r dotenv-override-true/config src/index.ts"
+    "test": "ts-node -r dotenv-override-true/config src/local.ts"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.6.2"
+    "express-http-proxy": "^1.6.2",
+    "serverless-http": "^2.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -16,6 +17,7 @@
     "@types/node": "^14.6.3",
     "dotenv-override-true": "^6.2.1",
     "gts": "^2.0.2",
+    "serverless": "^1.81.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "yarn-upgrade-all": "^0.5.4"
