--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
+    "googleapis": "^59.0.0",
     "serverless-http": "^2.5.0"
   },
   "devDependencies": {
